@@ -50,8 +50,9 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 - Price calculations fixed for many item types
 
 ## Lua
-- ``dfhack.items.markForTrade``: new API for marking items for trade
 - ``dfhack.units.getUnitByNobleRole``, ``dfhack.units.getUnitsByNobleRole``: unit lookup API by role
+- ``dfhack.items.markForTrade``: mark items for trade
+- ``dfhack.items.isRequestedTradeGood``: discover whether an item is named in a trade agreement with an active caravan
 - ``dfhack.items.getValue``: gained optional ``caravan`` and ``caravan_buying`` parameters for prices that take trader races and agreements into account
 
 ## Removed
